infra/01-network-stack/network-stack.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
  This template is for provisioning of 
  VPC, Internet Gateway, Subnets, 
  NAT Gateway and Route Tables

Parameters:
  OrganizationName:
    Description: Organization Name to identify stack and infrastructure
    Type: String
  ProjectName:
    Description: Project Name inside the Domain to identify stack and infrastructure
    Type: String
  Environment:
    Description: Environment to deploy the Stack
    Type: String
    AllowedValues:
      - prod
      - dev
  CidrBlock:
    Description: The primary CIDR Block for your VPC
    Type: String
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Default: 10.0.0.0/16
    ConstraintDescription: Invalid CIDR Block
  OfficeIp:
    Type: String
    Default: "174.62.73.65/32"
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
  Changelog:
    Type: String
    Default: "Initial"

Conditions:
  IsProd: !Equals [!Ref Environment, "prod"]
  DeployEastRegionOnly: !Equals [!Ref "AWS::Region", "us-east-1"]
  DeployWestRegionOnly: !Equals [!Ref "AWS::Region", "us-west-2"]

Mappings:
  RegionMap:
    us-east-1:
      az1: us-east-1a
      az2: us-east-1b
      az3: us-east-1c
      cidrblock: 10.1.0.0/16
      PublicSubnetA: 10.1.16.0/20
      PublicSubnetB: 10.1.32.0/20
      PublicSubnetC: 10.1.48.0/20
      WebSubnetA: 10.1.64.0/20
      WebSubnetB: 10.1.80.0/20
      WebSubnetC: 10.1.96.0/20
      AppSubnetA: 10.1.128.0/20
      AppSubnetB: 10.1.144.0/20
      AppSubnetC: 10.1.160.0/20
      DBSubnetA: 10.1.192.0/20
      DBSubnetB: 10.1.208.0/20
      DBSubnetC: 10.1.224.0/20
    us-west-2:
      az1: us-west-2a
      az2: us-west-2b
      az3: us-west-2c
      cidrblock: 10.0.0.0/16
      PublicSubnetA: 10.0.16.0/20
      PublicSubnetB: 10.0.32.0/20
      PublicSubnetC: 10.0.48.0/20
      WebSubnetA: 10.0.64.0/20
      WebSubnetB: 10.0.80.0/20
      WebSubnetC: 10.0.96.0/20
      AppSubnetA: 10.0.112.0/20
      AppSubnetB: 10.0.128.0/20
      AppSubnetC: 10.0.144.0/20
      DBSubnetA: 10.0.160.0/20
      DBSubnetB: 10.0.176.0/20
      DBSubnetC: 10.0.192.0/20

Resources:
  ## VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: !Ref CidrBlock
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-VPC

  ## Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-InternetGateway

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  ## Subnets
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", PublicSubnetA]
      AvailabilityZone: !FindInMap [RegionMap, !Ref "AWS::Region", az1]
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-PublicSubnetA

  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", PublicSubnetB]
      AvailabilityZone: !FindInMap [RegionMap, !Ref "AWS::Region", az2]
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-PublicSubnetB

  PublicSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", PublicSubnetC]
      AvailabilityZone: !FindInMap [RegionMap, !Ref "AWS::Region", az3]
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-PublicSubnetC

  WebSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", WebSubnetA]
      AvailabilityZone: !FindInMap [RegionMap, !Ref "AWS::Region", az1]
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-WebSubnetA

  WebSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", WebSubnetB]
      AvailabilityZone: !FindInMap [RegionMap, !Ref "AWS::Region", az2]
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-WebSubnetB

  WebSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", WebSubnetC]
      AvailabilityZone: !FindInMap [RegionMap, !Ref "AWS::Region", az3]
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-WebSubnetC

  AppSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", AppSubnetA]
      AvailabilityZone: !FindInMap [RegionMap, !Ref "AWS::Region", az1]
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-AppSubnetA

  AppSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", AppSubnetB]
      AvailabilityZone: !FindInMap [RegionMap, !Ref "AWS::Region", az2]
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-AppSubnetB

  AppSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", AppSubnetC]
      AvailabilityZone: !FindInMap [RegionMap, !Ref "AWS::Region", az3]
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-AppSubnetC

  DBSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", DBSubnetA]
      AvailabilityZone: !FindInMap [RegionMap, !Ref "AWS::Region", az1]
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-DBSubnetA

  DBSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", DBSubnetB]
      AvailabilityZone: !FindInMap [RegionMap, !Ref "AWS::Region", az2]
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-DBSubnetB

  DBSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", DBSubnetC]
      AvailabilityZone: !FindInMap [RegionMap, !Ref "AWS::Region", az3]
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-DBSubnetC

  ## NAT Gateway
  NatIp1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-NatIp1

  NatIp2:
    Type: AWS::EC2::EIP
    Condition: IsProd
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-NatIp2

  NatIp3:
    Type: AWS::EC2::EIP
    Condition: IsProd
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-NatIp3

  NatGateway1:
    Type: AWS::EC2::NatGateway
    DependsOn: VPCGatewayAttachment
    Properties:
      AllocationId:
        Fn::GetAtt:
          - NatIp1
          - AllocationId
      SubnetId: !Ref PublicSubnetA
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-NATGateway1

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Condition: IsProd
    DependsOn: VPCGatewayAttachment
    Properties:
      AllocationId:
        Fn::GetAtt:
          - NatIp2
          - AllocationId
      SubnetId: !Ref PublicSubnetB
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-NATGateway2

  NatGateway3:
    Type: AWS::EC2::NatGateway
    Condition: IsProd
    DependsOn: VPCGatewayAttachment
    Properties:
      AllocationId:
        Fn::GetAtt:
          - NatIp3
          - AllocationId
      SubnetId: !Ref PublicSubnetC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-NATGateway3

  ## Route Tables
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-PublicRouteTable

  PublicDefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetB
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetC
      RouteTableId: !Ref PublicRouteTable

  WebRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-WebRouteTable1

  DefaultWebRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref WebRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  WebSubnetRoute1TableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref WebSubnetA
      RouteTableId: !Ref WebRouteTable1

  WebRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-WebRouteTable2

  DefaultWebRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref WebRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If [IsProd, !Ref NatGateway2, !Ref NatGateway1]

  WebSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref WebSubnetB
      RouteTableId: !Ref WebRouteTable2

  WebRouteTable3:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-WebRouteTable3

  DefaultWebRoute3:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref WebRouteTable3
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If [IsProd, !Ref NatGateway3, !Ref NatGateway1]

  WebSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref WebSubnetC
      RouteTableId: !Ref WebRouteTable3

  AppRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-AppRouteTable1

  DefaultAppRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref AppRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  AppSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AppSubnetA
      RouteTableId: !Ref AppRouteTable1

  AppRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-AppRouteTable2

  DefaultAppRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref AppRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If [IsProd, !Ref NatGateway2, !Ref NatGateway1]

  AppSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AppSubnetB
      RouteTableId: !Ref AppRouteTable2

  AppRouteTable3:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-AppRouteTable3

  DefaultAppRoute3:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref AppRouteTable3
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If [IsProd, !Ref NatGateway3, !Ref NatGateway1]

  AppSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AppSubnetC
      RouteTableId: !Ref AppRouteTable3

  DBRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-DBRouteTable1

  DBSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DBSubnetA
      RouteTableId: !Ref DBRouteTable1

  DBSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DBSubnetB
      RouteTableId: !Ref DBRouteTable1

  DBSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DBSubnetC
      RouteTableId: !Ref DBRouteTable1

  # NACL

  PublicNacl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Public-NACL

  PublicNACLIngress100:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNacl
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      CidrBlock: !Ref OfficeIp
      PortRange:
        From: 22
        To: 22

  PublicNACLIngress200:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNacl
      RuleNumber: 200
      Protocol: -1
      PortRange:
        From: 0
        To: 65535
      RuleAction: allow
      CidrBlock: !Ref CidrBlock

  PublicNACLIngress300:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNacl
      RuleNumber: 300
      Protocol: 6
      PortRange:
        From: 0
        To: 65535
      RuleAction: allow
      CidrBlock: 0.0.0.0/0

  PublicNACLEgress100:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNacl
      RuleNumber: 100
      Protocol: -1
      Egress: True
      RuleAction: allow
      CidrBlock: 0.0.0.0/0

  WebNacl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Web-NACL

  WebNACLIngress100:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref WebNacl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      CidrBlock: !Ref CidrBlock
      PortRange:
        From: 0
        To: 65535

  WebNACLIngress200:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref WebNacl
      RuleNumber: 200
      Protocol: 6
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 1024
        To: 65535

  WebNACLEgress100:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref WebNacl
      RuleNumber: 100
      Protocol: -1
      Egress: True
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 0
        To: 65535

  AppNacl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: App-NACL

  AppNACLIngress100:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref AppNacl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      CidrBlock: !Ref CidrBlock
      PortRange:
        From: 0
        To: 65535

  AppNACLIngress200:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref AppNacl
      RuleNumber: 200
      Protocol: 6
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 1024
        To: 65535


  AppNACLEgress100:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref AppNacl
      RuleNumber: 100
      Protocol: -1
      Egress: True
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 0
        To: 65535

  DBNacl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: DB-NACL

  # Allows AppSubnetA
  DbNACLIngress100:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref DBNacl
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", AppSubnetA]
      PortRange:
        From: 5432
        To: 5432

  # Allows AppSubnetB
  DbNACLIngress200:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref DBNacl
      RuleNumber: 200
      Protocol: 6
      RuleAction: allow
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", AppSubnetB]
      PortRange:
        From: 5432
        To: 5432

  # Allows AppSubnetC
  DbNACLIngress300:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref DBNacl
      RuleNumber: 300
      Protocol: 6
      RuleAction: allow
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", AppSubnetC]
      PortRange:
        From: 5432
        To: 5432

  # Allows JumpHost
  DbNACLIngress400:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref DBNacl
      RuleNumber: 400
      Protocol: 6
      RuleAction: allow
      CidrBlock: !Ref CidrBlock
      PortRange:
        From: 5432
        To: 5432

  # Allows AppSubnetA
  DbNACLEgress100:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref DBNacl
      RuleNumber: 100
      Protocol: 6
      Egress: True
      RuleAction: allow
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", AppSubnetA]
      PortRange:
        From: 1024
        To: 65535

  # Allows AppSubnetB
  DbNACLEgress200:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref DBNacl
      RuleNumber: 200
      Protocol: 6
      Egress: True
      RuleAction: allow
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", AppSubnetB]
      PortRange:
        From: 1024
        To: 65535

  # Allows AppSubnetC
  DbNACLEgress300:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref DBNacl
      RuleNumber: 300
      Protocol: 6
      Egress: True
      RuleAction: allow
      CidrBlock: !FindInMap [RegionMap, !Ref "AWS::Region", AppSubnetC]
      PortRange:
        From: 1024
        To: 65535

  # Allows JumpHost
  DbNACLEgress400:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref DBNacl
      RuleNumber: 400
      Protocol: 6
      Egress: True
      RuleAction: allow
      CidrBlock: !Ref CidrBlock
      PortRange:
        From: 1024
        To: 65535

  ## Subnet and Network ACL Association
  PublicSubnetNacl1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      NetworkAclId: !Ref PublicNacl

  PublicSubnetNacl2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnetB
      NetworkAclId: !Ref PublicNacl

  PublicSubnetNacl3:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnetC
      NetworkAclId: !Ref PublicNacl

  WebSubnetNacl1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref WebSubnetA
      NetworkAclId: !Ref WebNacl

  WebSubnetNacl2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref WebSubnetB
      NetworkAclId: !Ref WebNacl

  WebSubnetNacl3:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref WebSubnetC
      NetworkAclId: !Ref WebNacl

  AppSubnetNacl1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref AppSubnetA
      NetworkAclId: !Ref AppNacl

  AppSubnetNacl2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref AppSubnetB
      NetworkAclId: !Ref AppNacl

  AppSubnetNacl3:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref AppSubnetC
      NetworkAclId: !Ref AppNacl

  DBSubnetNacl1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref DBSubnetA
      NetworkAclId: !Ref DBNacl

  DBSubnetNacl2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref DBSubnetB
      NetworkAclId: !Ref DBNacl

  DBSubnetNacl3:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref DBSubnetC
      NetworkAclId: !Ref DBNacl

  DBSubnetGroup:
    Type: "AWS::RDS::DBSubnetGroup"
    Properties:
      DBSubnetGroupDescription: "DB Subnet Group for RDS Instances"
      SubnetIds:
        - !Ref DBSubnetA
        - !Ref DBSubnetB
        - !Ref DBSubnetC
      Tags:
        - Key: "Name"
          Value: !Sub "${ProjectName}-${Environment} RDS Subnet Group"

  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Access to the load balancer that sits in the PublicSubNet
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
        - CidrIp: !Ref OfficeIp
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-PublicSecurityGroup

  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Access to the instances on the WebSubnet
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref PublicSecurityGroup
          IpProtocol: -1
        - CidrIp: !Ref CidrBlock
          IpProtocol: -1
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-WebSecurityGroup

  AppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Access to the instances on the AppSubnet
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref WebSecurityGroup
          IpProtocol: -1
        - CidrIp: !Ref CidrBlock
          IpProtocol: -1
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-AppSecurityGroup

  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Access to the instances on the DBSubnet
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref AppSecurityGroup
          IpProtocol: -1
        - CidrIp: !Ref CidrBlock
          IpProtocol: -1
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-DBSecurityGroup

  ExtApiELBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Default security group to be used on external load balancers
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: '443'
          IpProtocol: tcp
          ToPort: '443'
        - CidrIp: 0.0.0.0/0
          FromPort: '80'
          IpProtocol: tcp
          ToPort: '80'
        - SourceSecurityGroupId: !Ref WebSecurityGroup
          FromPort: '443'
          IpProtocol: tcp
          ToPort: '443'
        - SourceSecurityGroupId: !Ref WebSecurityGroup
          FromPort: '80'
          IpProtocol: tcp
          ToPort: '80'
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-ExtApiELBSecurityGroup"

  ExtWWWELBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Default security group to be used on external load balancers
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: '443'
          IpProtocol: tcp
          ToPort: '443'
        - CidrIp: 0.0.0.0/0
          FromPort: '80'
          IpProtocol: tcp
          ToPort: '80'
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-ExtWWWELBSecurityGroup"

Outputs:
  VpcId:
    Description: ID of the created VPC
    Value: !Ref VPC
    Export:
      Name: !Sub ${AWS::StackName}-VPCID
  PublicSubnetA:
    Value: !Ref PublicSubnetA
    Export:
      Name: !Sub ${AWS::StackName}-PublicSubnetA
  PublicSubnetB:
    Value: !Ref PublicSubnetB
    Export:
      Name: !Sub ${AWS::StackName}-PublicSubnetB
  PublicSubnetC:
    Value: !Ref PublicSubnetC
    Export:
      Name: !Sub ${AWS::StackName}-PublicSubnetC
  WebSubnetA:
    Value: !Ref WebSubnetA
    Export:
      Name: !Sub ${AWS::StackName}-WebSubnetA
  WebSubnetB:
    Value: !Ref WebSubnetB
    Export:
      Name: !Sub ${AWS::StackName}-WebSubnetB
  WebSubnetC:
    Value: !Ref WebSubnetC
    Export:
      Name: !Sub ${AWS::StackName}-WebSubnetC
  AppSubnetA:
    Value: !Ref AppSubnetA
    Export:
      Name: !Sub ${AWS::StackName}-AppSubnetA
  AppSubnetB:
    Value: !Ref AppSubnetB
    Export:
      Name: !Sub ${AWS::StackName}-AppSubnetB
  AppSubnetC:
    Value: !Ref AppSubnetC
    Export:
      Name: !Sub ${AWS::StackName}-AppSubnetC
  DbSubnetA:
    Value: !Ref DBSubnetA
    Export:
      Name: !Sub ${AWS::StackName}-DBSubnetA
  DbSubnetB:
    Value: !Ref DBSubnetB
    Export:
      Name: !Sub ${AWS::StackName}-DBSubnetB
  DbSubnetC:
    Value: !Ref DBSubnetC
    Export:
      Name: !Sub ${AWS::StackName}-DBSubnetC

  DbSubnetGroup:
    Value: !Ref DBSubnetGroup
    Export:
      Name: !Sub ${AWS::StackName}-DbSubnetGroup

  PublicSecurityGroup:
    Value: !Ref PublicSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}-PublicSecurityGroup

  WebSecurityGroup:
    Value: !Ref WebSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}-WebSecurityGroup

  AppSecurityGroup:
    Value: !Ref AppSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}-AppSecurityGroup

  DBSecurityGroup:
    Value: !Ref DBSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}-DBSecurityGroup

  ExtApiELBSecurityGroup:
    Description: Security group ID for the external API ELB
    Value: !Ref ExtApiELBSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}-ExtApiELBSecurityGroup

  ExtWWWELBSecurityGroup:
    Description: Security group ID for the external WWW ELB
    Value: !Ref ExtWWWELBSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}-ExtWWWELBSecurityGroup

  PublicSubnets:
    Value:
      !Join [",", [!Ref PublicSubnetA, !Ref PublicSubnetB, !Ref PublicSubnetC]]
    Export:
      Name: !Sub ${AWS::StackName}-PublicSubnets

  WebSubnets:
    Value:
      !Join [",",[!Ref WebSubnetA, !Ref WebSubnetB, !Ref WebSubnetC]]
    Export:
      Name: !Sub ${AWS::StackName}-WebSubnets

  AppSubnets:
    Value:
      !Join [",",[ !Ref AppSubnetA, !Ref AppSubnetB, !Ref AppSubnetC ]]
    Export:
      Name: !Sub ${AWS::StackName}-AppSubnets

  DBSubnets:
    Value: !Join [",", [!Ref DBSubnetA, !Ref DBSubnetB, !Ref DBSubnetC]]
    Export:
      Name: !Sub ${AWS::StackName}-DBSubnets
  Changelog:
    Value: !Ref Changelog
